media/css/DasStyle.css
@charset "UTF-8";
/* CSS Document */

body {
	margin-left: 0px;
	margin-top: 50px;
}

.DAShome {
	height: 800px;
	width: 975px;
	margin-right: auto;
	margin-left: auto;
	position: relative;
}
.homeTEXT {
	font-family: Gill Sans, Arial, Helvetica, sans-serif;
	font-size: 14px;
	line-height: 19px;
	font-weight: normal;
	color: #555;
	text-align: justify;
}
.header2 {
	font-family: Gill Sans, Arial, Helvetica, sans-serif;
	font-size: 25px;
	line-height: 31px;
	font-weight: normal;
	color: #333;
}
.DASresearch {
	height: 1500px;
	width: 975px;
	margin-right: auto;
	margin-left: auto;
	position: relative;
}
.divisionLine {
	border-bottom-width: thin;
	border-bottom-style: dotted;
	border-bottom-color: #666;
}
a:link {
	font-family: Gill Sans, Arial, Helvetica, sans-serif;
	color: #00837F;
	text-decoration: none;
}
a:visited {
	font-family: Gill Sans, Arial, Helvetica, sans-serif;
	color: #00837F;
	text-decoration: none;
}
a:hover {
	font-family: Gill Sans, Arial, Helvetica, sans-serif;
	color: #333;
	text-decoration: none;
}
a:active {
	font-family: Gill Sans, Arial, Helvetica, sans-serif;
	color: #00837F;
	text-decoration: none;
}
.DASpeople {
	height: 2500px;
	width: 975px;
	margin-right: auto;
	margin-left: auto;
	position: relative;
}
.peopleH2 {
	font-family: Gill Sans, Arial, Helvetica, sans-serif;
	font-size: 20px;
	line-height: 20px;
	font-weight: bold;
	color: #00837F;
}
.peopleTEXT {
	font-family: Gill Sans, Arial, Helvetica, sans-serif;
	font-size: 14px;
	line-height: 14px;
	font-weight: normal;
	color: #666;
}
.DAScontact {
	height: 1160px;
	width: 975px;
	margin-right: auto;
	margin-left: auto;
	position: relative;
}
.contactH1 {
	font-family: Gill Sans, Arial, Helvetica, sans-serif;
	font-size: 14px;
	line-height: 14px;
	font-weight: bold;
	color: #333;
}
.ContactH2 {
	font-family: Gill Sans, Arial, Helvetica, sans-serif;
	font-size: 18px;
	line-height: 23px;
	font-weight: bold;
	color: #333;
	text-decoration: none;
}
.contactH3 {
	font-family: Gill Sans, Arial, Helvetica, sans-serif;
	font-size: 18px;
	line-height: 23px;
	font-weight: bold;
	color: #007E79;
}
.DASresources {
	height: 1725px;
	width: 975px;
	margin-right: auto;
	margin-left: auto;
	position: relative;
}
.PubH1 {
	font-family: Gill Sans, Arial, Helvetica, sans-serif;
	font-size: 26px;
	font-weight: normal;
	color: #333;
}
.pubH2 {
	font-family: Gill Sans, Arial, Helvetica, sans-serif;
	font-size: 26px;
	font-weight: bold;
	color: #333;
}
.teal1 {
	font-family: Gill Sans, Arial, Helvetica, sans-serif;
	font-size: 14px;
	font-weight: normal;
	color: #00817D;
}
.DASpub {
	height: 7250px;
	width: 975px;
	margin-right: auto;
	margin-left: auto;
	position: relative;
}

